# archibald

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
archibald/: config.py  main.py
archibald/cogs/: alias.py  dm_forward.py  links.json  literally_1984.py  snipe.py  susbot.py
src/: code_preprocessor.rs  executor.rs  main.rs
